--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -159,7 +159,7 @@
                                 <StackPanel Orientation="Horizontal">
                                     <tree:TreeListViewExpander Margin="3,0"/>
                                     <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="3,0"/>
-                                    <ddmb:DropDownMenuButton Style="{DynamicResource MetroFlatToggleButton}" Margin="3,0">
+                                    <ddmb:DropDownMenuButton Style="{DynamicResource MetroToggleButton}" Margin="3,0">
                                         <!--<StackPanel Orientation="Horizontal ">-->
                                         <TextBlock Text="編"/>
                                         <!--<Path Width="8" Height="6" Margin="0,0,0,0" Stretch="Fill" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ddmb:DropDownMenuButton}},Path=Foreground}" Data="F1 M 57.5692,88L 99.1384,16L 16,16L 57.5692,88 Z "/>-->
